// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Tests  Actions Renders 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 16,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#000000",
        },
        {
          "writingDirection": "ltr",
        },
        {},
        {
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        {},
        undefined,
        [
          {
            "marginTop": 20.8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Test
  </Text>
  <View
    style={
      [
        {
          "marginTop": 20.8,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0,
          "elevation": 0,
          "minWidth": 64,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "disabled": true,
          }
        }
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "borderRadius": 4,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "marginLeft": 12,
                "marginRight": -4,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  undefined,
                  {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text
            numberOfLines={1}
            selectable={false}
            style={
              [
                {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                {
                  "textAlign": "left",
                },
                [
                  {
                    "letterSpacing": 1,
                    "marginHorizontal": 16,
                    "marginVertical": 9,
                    "textAlign": "center",
                  },
                  undefined,
                  {
                    "textTransform": "uppercase",
                  },
                  {
                    "color": "#6200ee",
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  undefined,
                ],
              ]
            }
          >
            Add Device
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EmptyState Tests  Description Renders 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 16,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#000000",
        },
        {
          "writingDirection": "ltr",
        },
        {},
        {
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        {},
        undefined,
        [
          {
            "marginTop": 20.8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Test
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#000000",
        },
        {
          "writingDirection": "ltr",
        },
        {},
        {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        {},
        undefined,
        [
          {
            "color": "#000000",
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Description
  </Text>
</View>
`;

exports[`EmptyState Tests  Icon Renders 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 16,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    selectable={false}
    style={
      [
        {
          "color": "#000000",
          "fontSize": 100,
        },
        {},
        {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    󰞱
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#000000",
        },
        {
          "writingDirection": "ltr",
        },
        {},
        {
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        {},
        undefined,
        [
          {
            "marginTop": 20.8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Test
  </Text>
</View>
`;

exports[`EmptyState Tests  Only Title Renders 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 16,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#000000",
        },
        {
          "writingDirection": "ltr",
        },
        {},
        {
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        {},
        undefined,
        [
          {
            "marginTop": 20.8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    EmptyState
  </Text>
</View>
`;

exports[`EmptyState Tests  Title, actions, Description Renders 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 16,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#000000",
        },
        {
          "writingDirection": "ltr",
        },
        {},
        {
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        {},
        undefined,
        [
          {
            "marginTop": 20.8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    EmptyState
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#000000",
        },
        {
          "writingDirection": "ltr",
        },
        {},
        {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        {},
        undefined,
        [
          {
            "color": "#000000",
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Description
  </Text>
  <View
    style={
      [
        {
          "marginTop": 20.8,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0,
          "elevation": 0,
          "minWidth": 64,
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "disabled": true,
          }
        }
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "borderRadius": 4,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "marginLeft": 12,
                "marginRight": -4,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  undefined,
                  {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text
            numberOfLines={1}
            selectable={false}
            style={
              [
                {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                {
                  "textAlign": "left",
                },
                [
                  {
                    "letterSpacing": 1,
                    "marginHorizontal": 16,
                    "marginVertical": 9,
                    "textAlign": "center",
                  },
                  undefined,
                  {
                    "textTransform": "uppercase",
                  },
                  {
                    "color": "#6200ee",
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  undefined,
                ],
              ]
            }
          >
            Add Device
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
